fixed some responsive issues on Iphone after featured-products

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,6 +179,25 @@ input {
   }
 }
 /*start footer*/
+
+@media screen and (max-width: 600px) {
+  .featured-product .row {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .featured-product .product {
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto 20px auto;
+  }
+  .headerr .bar {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+  }
+}
 .footer {
   background-color: #eeeffb;
 }
